Fix z-indexs ongoing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -153,7 +153,10 @@ body > footer {
   }
 
   .message-container {
-    z-index: 1;
+    z-index: 4;
+}
+.zindex {
+    z-index: 5;
 }
 
 .custom-toast {
@@ -287,3 +290,4 @@ input {
     }
 
 }
+z-index
